--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,27 @@
 # Site
-repository: sproogen/resume-theme
+repository: elena-dodici/elena-dodici.github.io
 favicon: images/favicon.ico
 
 # Content configuration version
-# version: 2
+version: 2
 
 # Personal info
 name: Jiaqi Wu
-title: Senior Network System Administrator
+#title: Senior Network System Administrator
 email: jiaqi.wu@studenti.polito.it
-website: www.github.com/sproogen/resume-theme
-
+website: https://github.com/elena-dodici
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
 #twitter_username: facespics
-github_username:  sproogen
+github_username:  elena-dodici
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
 #instagram_username: jameswgrant
-linkedin_username: jameswgrant
+linkedin_username: jiaqi-wu12
 # xing_username: jekyll
 # pinterest_username: jekyll
 #youtube_username: globalmtb
@@ -30,10 +29,10 @@ linkedin_username: jameswgrant
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-additional_links:
-- title: itsgoingto.be
-  icon: fas fa-globe
-  url: https://www.itsgoingto.be
+#additional_links:
+#- title: itsgoingto.be
+#  icon: fas fa-globe
+# url: https://www.itsgoingto.be
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
@@ -48,69 +47,130 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
-
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  Hello, I'm Jiaqi, a Computer Engineering graduate student at Polytechnic University of Turin, specializing in Artificial Intelligence and Data Analytics. 
+  
+  I usually use Java and Javascript to develop and test in projects.While machine learning can be challenging, I enjoy the process of building and tuning models, almost like caring for a baby.
+  
+  In the end, welcome to my site! I'm thrilled that you're here :)!
+ 
 
 content:
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Super awesome project
-        link: github.com/sproogen
+        title: HikeTracker application( <mark>JavaScript</mark> + <mark>Node</mark> + <mark>React</mark>)
+        link: github.com/elena-dodici/se-2022-09-HikeTracker
         # link_text: Project Website
         additional_links:
-          - title:  sproogen/modern-resume-theme
+          - title: elena-dodici/HikeTracker
             icon: fab fa-github
-            url: github.com/sproogen/modern-resume-theme
+            url: github.com/elena-dodici/se-2022-09-HikeTracker
           # - title:  Github page for project (eg. sproogen/modern-resume-theme)
           #   icon: fab fa-github
           #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
         quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+          An application to record all activity trails and registration functions, enabling stakeholders to manipulate data according to their roles.
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+           We implement SonarCloud and designed hundreds of unit & integration tests to realize higher coverage ratio and eliminate code smells.
+          
+           Several functions(action, artifacts) in a GitHub and Docker implementation are used to enable efficient code deployment.        
+          
+           Skilled in both **Scrum, Waterfall** development process.
 
-  - title: Experience # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
+      - layout: top-middle
+        title: Domain Disentanglement through natural language(<mark>Pytorch</mark>)
+        link: github.com/elena-dodici/Vision-Language-AML
+        # link_text: Project Website
+        additional_links:
+          - title: elena-dodici/Dom2Vec
+            icon: fab fa-github
+            url: github.com/elena-dodici/Vision-Language-AML
+          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+          #   icon: fab fa-github
+          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+          We use the idea from GAN to disentangle domain-specific features successfully from images.
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+          During project, we reproduced Dom2Vec model to tackle . After that, we imported CLIP model to assist with feature disentanglement tasks, and fine-tuned it to improve its ability to perform downstream tasks.
+          
+          We are so pround of that a great improvement on accuracy is achived! 
+         
+
+      - layout: top-middle
+        title: Wine Quality classification(<mark>Python</mark>)
+        link: github.com/elena-dodici/ML_Project
+        # link_text: Project Website
+        additional_links:
+          - title: elena-dodici/ML
+            icon: fab fa-github
+            url: github.com/elena-dodici/ML_Project
+          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+          #   icon: fab fa-github
+          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+        quote: >
+          A project to predict the wind quality.
+        description: | # this will include new lines to allow paragraphs
+          Employed various technologies, such as Regularization and normalization, to preprocess and analyze raw data.
+          
+          Trained various models, including SVM, GMM, and Logistic Regression, with the most accurate model achieving 85% accuracy.
+
+      - layout: top-middle
+        title: Riddle Game(<mark>Node</mark>)
+        link: github.com/elena-dodici/Riddle
+        # link_text: Project Website
+        additional_links:
+          - title: elena-dodici/Riddle
+            icon: fab fa-github
+            url: github.com/elena-dodici/Riddle
+          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+          #   icon: fab fa-github
+          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+        quote: >
+          This is a web riddle game with gaming platform management.
+        description: | # this will include new lines to allow paragraphs
+          I constructed SQL databases for riddles and users with a suitable schema design. Data validation is used to ensure a ributness of database. I also built a RESTful APIs that served data to front-end(React) based on diverse requests.
+         
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
+        title: Polytechnic university of turin, Italy
+        caption: 2021 - Now
+        sub_title: MSc Computer Engineering
         quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-        description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+          The first Italian Engineering School, founded as a School for Engineers in 1859. This long ever-changing history has rated Politecnico among the top European technical Universities for education and research.
+        description: | # this will include new lines to allow paragraphs       
+          When I was pursuing my second degree at Polito, I learned many useful skills especially a problem - solving idea which can tell me a way to tackle the real world issues.     
 
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+    
+      - layout: left
+        title: Polytechnic university of turin, Italy
+        caption: 2015 - 2018
+        sub_title: MSc Automotive Engineering
+        description: | # this will include new lines to allow paragraphs
+          During my time at Polito I understand the essential role of teamwork in an international groups and I have learnt great communication and coordination skills which is useful when I was doing my off-campus internship.
+      
+      - layout: left
+        title: Hubei University of Automotive Technology, China
+        caption: 2011 - 2015
+        sub_title: BSc Automotive Engineering
+        description: | # this will include new lines to allow paragraphs
+          I have received scholarship for three consecutive years, I thouroughly enjoyed the time when I was in university. I was a member in students' union, helped to organize several activities.
+
+   
+    
+      
+         
 
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+      Alongside my interests in software engineering some of my other interests and hobbies are:
+      - Swimming
+      - Yoga
+      
 
 # Footer
 footer_show_references: true
